# vibe-kanban

./: .gitignore  Cargo.toml
crates/api-types/src/: issue_comment.rs  issue_comment_reaction.rs  issue_follower.rs  project.rs  project_status.rs  tag.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260328000000_add_jira_tables.sql  20260328000001_local_kanban_tables.sql  20260329000000_add_issue_link_to_workspaces.sql
crates/db/src/models/: issue_assignee.rs  issue_comment.rs  issue_relationship.rs  issue_tag.rs  jira.rs  local_issue.rs  mod.rs  project.rs  project_status.rs  project_tag.rs  task.rs  workspace.rs
crates/git/tests/: git_workflow.rs
crates/jira-client/: Cargo.toml
crates/jira-client/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/remote/: Cargo.toml  Dockerfile
crates/remote/migrations/: 20260327000000_jira_connections.sql  20260328000000_jira_status_mappings.sql  20260330000000_jira_unique_issue_key.sql
crates/remote/src/: config.rs
crates/remote/src/auth/: jwt.rs
crates/remote/src/db/: jira.rs  mod.rs  tags.rs
crates/remote/src/routes/: issues.rs  jira.rs  mod.rs  organization_members.rs  pull_requests.rs  workspaces.rs
crates/server/: Cargo.toml
crates/server/src/: crypto.rs  error.rs  lib.rs
crates/server/src/routes/: jira.rs  mod.rs  organizations.rs
crates/server/src/routes/relay_auth/: client.rs
crates/server/src/routes/remote/: issue_assignees.rs  issue_comment_reactions.rs  issue_comments.rs  issue_followers.rs  issue_tags.rs  (+10 more)
crates/services/src/services/: remote_client.rs
shared/: remote-types.ts
(+4 files in other folders)
