[package]
name = "jira-client"
version = "0.1.36"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4"] }
